# gbump

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml  deploy.yml  packagecloud.yml  test.yml
gbump/: Cargo.toml
src/: main.rs
