[package]
name = "gbump"
version = "1.1.3"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Git tag semantic version bumper"
documentation = "https://github.com/nbari/gbump"
homepage = "https://github.com/nbari/gbump"
repository = "https://github.com/nbari/gbump"
readme = "README.md"
keywords = ["git", "semver", "bump", "version", "tag"]
categories = ["command-line-utilities", "os"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
regex = "1.11"
clap = "4"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
git2 = "0.20"
